<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/home_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="QUIZY"
        android:textColor="#CC0000"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="12dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/header_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/home_title" />


    <View
        android:id="@+id/menu_bar_bg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#F0F0F0"
        app:layout_constraintTop_toBottomOf="@id/header_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@android:drawable/ic_menu_sort_by_size"
        android:padding="5dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/menu_bar_bg"
        app:layout_constraintBottom_toBottomOf="@+id/menu_bar_bg"
        app:tint="#000000" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_quiz_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:visibility="gone"
        tools:listitem="@layout/item_quiz_row"
        app:layout_constraintTop_toBottomOf="@+id/menu_bar_bg"
        app:layout_constraintBottom_toTopOf="@+id/button_pagina_successiva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_pagina_successiva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pagina Successiva"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/messaggio_benvenuto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Benvenuto in Quizy!\nApri il menu per iniziare."
        android:gravity="center"
        android:textColor="#888888"
        app:layout_constraintTop_toBottomOf="@+id/menu_bar_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- il menù e chiuso,  nel codice java va gestita la sua apertura -->
    <LinearLayout
        android:id="@+id/menu_tendina"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#B0B0B0"
        android:elevation="4dp"
        android:padding="1dp"
        android:visibility="gone"  app:layout_constraintTop_toBottomOf="@+id/menu_bar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="0dp">

        <!-- i seguenti quattro TextView si trovano nel menù -->

        <TextView
            android:id="@+id/menu_crea_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Crea Nuovo Quiz"
            android:textColor="#000000"
            android:padding="12dp"
            android:background="#B0B0B0"
            android:gravity="center_vertical"
            android:visibility="gone"/>

        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#000000"/>



        <TextView
            android:id="@+id/menu_cambio_ruolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cambio ruolo"
            android:textColor="#000000"
            android:padding="12dp"
            android:background="#B0B0B0"
            android:gravity="center_vertical"
            />

        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#000000"/>

        <TextView
            android:id="@+id/menu_visualizza_quiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Visualizza quiz"
            android:textColor="#000000"
            android:padding="12dp"
            android:background="#B0B0B0"
            android:gravity="center_vertical"/>

        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#000000"/>

        <TextView
            android:id="@+id/menu_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:textColor="#D32F2F"
            android:textStyle="bold"
            android:padding="12dp"
            android:background="#B0B0B0"
            android:gravity="center_vertical"/>

        <View android:layout_width="match_parent" android:layout_height="1dp" android:background="#000000"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>