<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="QUIZY"
        android:textColor="#CC0000"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="32dp"
        app:layout_constraintTop_toBottomOf="@id/register_title"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nome*"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>
            <EditText
                android:id="@+id/et_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D3D3D3"
                android:padding="10dp"
                android:inputType="textPersonName"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cognome*"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:onClick="cognomeRegistrazione"/>
            <EditText
                android:id="@+id/et_cognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D3D3D3"
                android:padding="10dp"
                android:inputType="textPersonName"
                android:layout_marginBottom="16dp"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nuovo nome utente"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>
            <EditText
                android:id="@+id/et_new_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D3D3D3"
                android:padding="10dp"
                android:inputType="text"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nuova Password"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>
            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D3D3D3"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_marginBottom="48dp"
                />

            <TextView
                android:id="@+id/link_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:onClick="ritornaHome2"
                android:text="Register"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:layout_width="80dp"
                android:layout_height="2dp"
                android:background="#000000"
                android:layout_gravity="center_horizontal"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="100dp"/>

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>